k8s_servicemesh/06_circuit-breaker/backend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training  
  name: backend
spec:
  hosts:
      - "*"
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: backend.training.svc.cluster.local
          subset: v1
